[gd_scene load_steps=6 format=2]

[ext_resource path="res://os/Window.gd" type="Script" id=1]
[ext_resource path="res://os/Segoe UI Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://os/gfx/window.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 0.188235, 0.188235, 0.188235, 1 )
Label/fonts/font = SubResource( 1 )

[node name="Window" type="NinePatchRect"]
margin_right = 724.0
margin_bottom = 680.0
rect_min_size = Vector2( 124, 80 )
rect_pivot_offset = Vector2( 362, 340 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 124, 80 )
patch_margin_left = 28
patch_margin_top = 44
patch_margin_right = 26
patch_margin_bottom = 18
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 1.0
margin_bottom = 37.0
theme = SubResource( 2 )
text = "Asteroids"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = 7.0
margin_top = 5.0
margin_right = -2.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = -13.0
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
